--- a/app/src/main/res/layout/wearable_fragment.xml
+++ b/app/src/main/res/layout/wearable_fragment.xml
@@ -5,8 +5,7 @@
     <import type="android.view.View"/>
     <variable name="viewmodel" type="com.mednote.cwru.googlefit.WearableViewModel"/>
 </data>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
