--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
         android:id="@+id/welcome_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log In To\nMenote"
+        android:text="Log In To\nMednote"
         android:textAlignment="center"
         android:textSize="48dp"
         android:textColor="@color/black"
