--- a/app/src/main/res/layout/user_fragment.xml
+++ b/app/src/main/res/layout/user_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <import type="android.view.View"/>
-        <variable name="viewmodel" type="com.mednote.cwru.googlefit.WearableViewModel"/>
+        <variable name="viewmodel" type="com.mednote.cwru.UserViewModel"/>
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="16dp"
-        android:text="Username"
+        android:text="@={viewmodel.uuid}"
         android:textColor="@color/black"
         android:textSize="24dp"
         android:textStyle="bold"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="48dp"
-        android:text="Lastname"
+        android:text="@={viewmodel.name}"
         android:textColor="@color/black"
         android:textSize="24dp"
         android:textStyle="bold"
@@ -49,15 +49,15 @@
         app:layout_constraintBottom_toBottomOf="@id/name"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <TextView
+    <Button
         android:id="@+id/status_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="171dp"
+        android:layout_height="74dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="48dp"
-        android:text="Paired to Google\nFit Watch"
+        android:text="Share GoogleFit data"
         android:textColor="@color/black"
-        android:textSize="24dp"
+        android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name" />
 
@@ -73,12 +73,12 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
-        android:id="@+id/address_tv"
+        android:id="@+id/dob"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="28dp"
         android:layout_marginTop="52dp"
-        android:text="Address:\n2261 Grandview Ave."
+        android:text="@={viewmodel.dob}"
         android:textColor="@color/black"
         android:textSize="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -94,7 +94,7 @@
         android:textColor="@color/black"
         android:textSize="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/address_tv" />
+        app:layout_constraintTop_toBottomOf="@id/dob" />
 
     <Button
         android:id="@+id/proceed_to_verification_button"
