--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
 
     <EditText
         android:id="@+id/id_tv"
-        android:text="@={viewmodel.userName}"
+        android:text="@={viewmodel.walletID}"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
@@ -37,8 +37,22 @@
         app:layout_constraintTop_toBottomOf="@id/welcome_tv"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:hint="UserName"
+        android:hint="Wallet ID"
         android:background="@color/browser_actions_bg_grey" />
+
+    <EditText
+        android:id="@+id/mnemonic_tv"
+        android:text="@={viewmodel.mnemonic}"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/id_tv"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:hint="Mnemonic"
+        android:background="@color/browser_actions_bg_grey" />
+
 
     <EditText
         android:id="@+id/pw_tv"
@@ -47,11 +61,23 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/id_tv"
+        app:layout_constraintTop_toBottomOf="@id/mnemonic_tv"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:hint="Password"
         android:background="@color/browser_actions_bg_grey" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="100dp"
+        android:layout_height="72dp"
+        android:text="Doctor?"
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pw_tv" />
 
     <Button
         android:id="@+id/proceed_to_verification_button"
