--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
@@ -27,7 +27,8 @@
         app:layout_constraintRight_toRightOf="parent"/>
 
     <EditText
-        android:id="@+id/id_tv"
+        android:id="@+id/fName_tv"
+        android:text="@={viewmodel.fname}"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
@@ -37,47 +38,62 @@
         app:layout_constraintTop_toBottomOf="@id/welcome_tv"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:hint="UserName"
+        android:hint="First Name"
         android:background="@color/browser_actions_bg_grey" />
 
     <EditText
-        android:id="@+id/pw_tv"
+        android:id="@+id/lName_tv"
+        android:text="@={viewmodel.lname}"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/id_tv"
+        app:layout_constraintTop_toBottomOf="@id/fName_tv"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:hint="Last Name"
+        android:background="@color/browser_actions_bg_grey" />
+
+    <EditText
+        android:id="@+id/pw_tv"
+        android:text="@={viewmodel.password}"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/lName_tv"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:hint="Password"
         android:background="@color/browser_actions_bg_grey" />
 
-    <EditText
-        android:id="@+id/name_tv"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/pw_tv"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:hint="Name"
-        android:background="@color/browser_actions_bg_grey" />
+        <EditText
+            android:id="@+id/dob_tv"
+            android:text="@={viewmodel.DOB}"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:background="@color/browser_actions_bg_grey"
+            android:hint="Date of Birth"
+            android:inputType="date"
+            android:padding="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pw_tv" />
 
-    <EditText
-        android:id="@+id/dob_tv"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/name_tv"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:inputType="date"
-        android:hint="Date of Birth"
-        android:background="@color/browser_actions_bg_grey" />
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="100dp"
+            android:layout_height="72dp"
+            android:text="Doctor?"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dob_tv" />
 
-    <Button
+        <Button
         android:id="@+id/proceed_to_verification_button"
         android:layout_width="0dp"
         android:layout_height="54dp"
@@ -89,6 +105,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
