--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,6 +71,7 @@
         android:id="@+id/checkBox"
         android:layout_width="100dp"
         android:layout_height="72dp"
+        android:checked="@={viewmodel.doctor}"
         android:text="Doctor?"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
