--- a/app/src/main/res/layout/activity_doctor_note_view.xml
+++ b/app/src/main/res/layout/activity_doctor_note_view.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/title_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add Doctor Note"
+                android:text="Vew Doctor Note"
                 android:textAlignment="center"
                 android:textSize="48dp"
                 android:textColor="@color/black"
