--- a/app/src/main/res/layout/user_fragment.xml
+++ b/app/src/main/res/layout/user_fragment.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="16dp"
         android:text="@={viewmodel.uuid}"
         android:textColor="@color/black"
-        android:textSize="24dp"
+        android:textSize="14dp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -51,8 +51,8 @@
 
     <Button
         android:id="@+id/status_tv"
-        android:layout_width="171dp"
-        android:layout_height="74dp"
+        android:layout_width="166dp"
+        android:layout_height="108dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="48dp"
         android:text="Share GoogleFit data"
@@ -95,6 +95,21 @@
         android:textSize="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dob" />
+
+    <Button
+        android:id="@+id/doctorcheck"
+        android:layout_width="0dp"
+        android:layout_height="54dp"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="48dp"
+        android:background="@drawable/style_button_blue"
+        android:text="View Notes"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toTopOf="@id/proceed_to_verification_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/proceed_to_verification_button"
