--- a/app/src/main/res/layout/activity_doctor_note_view.xml
+++ b/app/src/main/res/layout/activity_doctor_note_view.xml
@@ -76,9 +76,8 @@
                 android:hint="Immunization"
                 android:background="@color/browser_actions_bg_grey" />
 
-            <TextView
+            <ListView
                 android:id="@+id/notes_tv"
-                android:text="@={viewmodel.notes}"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_margin="16dp"
