--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -94,7 +94,7 @@
             app:layout_constraintTop_toBottomOf="@+id/dob_tv" />
 
         <Button
-        android:id="@+id/proceed_to_verification_button"
+        android:id="@+id/editview"
         android:layout_width="0dp"
         android:layout_height="54dp"
         android:background="@drawable/style_button_blue"
