--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -77,7 +77,7 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
-        android:id="@+id/proceed_to_verification_button"
+        android:id="@+id/editview"
         android:layout_width="0dp"
         android:layout_height="54dp"
         android:background="@drawable/style_button_blue"
