--- a/app/src/main/res/layout/user_fragment.xml
+++ b/app/src/main/res/layout/user_fragment.xml
@@ -106,13 +106,13 @@
         android:text="View Notes"
         android:textColor="@color/white"
         android:textSize="16dp"
-        app:layout_constraintBottom_toTopOf="@id/proceed_to_verification_button"
+        app:layout_constraintBottom_toTopOf="@id/editview"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <Button
-        android:id="@+id/proceed_to_verification_button"
+        android:id="@+id/editview"
         android:layout_width="0dp"
         android:layout_height="54dp"
         android:background="@drawable/style_button_blue"
