--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -25,7 +25,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
-        <EditText
+        <TextView
             android:id="@+id/id_tv"
             android:text="@={viewmodel.walletId}"
             android:layout_width="0dp"
@@ -40,7 +40,7 @@
             android:hint="Wallet ID"
             android:background="@color/browser_actions_bg_grey" />
 
-        <EditText
+       <!-- <TextView
             android:id="@+id/fname_tv"
             android:text="@={viewmodel.fname}"
             android:layout_width="0dp"
@@ -54,7 +54,7 @@
             android:background="@color/browser_actions_bg_grey" />
 
 
-        <EditText
+        <TextView
             android:id="@+id/lname_tv"
             android:text="@={viewmodel.lname}"
             android:layout_width="0dp"
@@ -65,22 +65,36 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:hint="Last Name"
-            android:background="@color/browser_actions_bg_grey" />
+            android:background="@color/browser_actions_bg_grey" />-->
 
-        <EditText
+        <TextView
             android:id="@+id/rsa_tv"
             android:text="@={viewmodel.rsaKey}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:padding="16dp"
-            app:layout_constraintTop_toBottomOf="@id/lname_tv"
+            app:layout_constraintTop_toBottomOf="@id/id_tv"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:visibility="gone"
             android:hint="RSA Public Key"
             android:background="@color/browser_actions_bg_grey" />
 
-        <Button
+        <TextView
+            android:id="@+id/mnemonic_tv"
+            android:text="@={viewmodel.mnemonic}"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="16dp"
+            app:layout_constraintTop_toBottomOf="@id/rsa_tv"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:hint="Mnemonic"
+            android:background="@color/browser_actions_bg_grey" />
+
+        <!--<Button
             android:id="@+id/create_wallet_button"
             android:layout_width="0dp"
             android:layout_height="54dp"
@@ -91,7 +105,7 @@
             android:layout_margin="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"/>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
